# insAIghts

./: .env.example  ADMIN-DOKUMENTATION.md  QUICKSTART.md  README.md  USER-DOKUMENTATION.md  admin-feature-spezifikation.md  anforderungen.md  docker-compose.coolify.yml  dokumentation-rechnungsverarbeitung-mvp.md  installation-neo4j-coolify.md  konzept-graph-auftragsbestaetigung.md  roadmap-12-monate-plattform.md  sprintplan-q1-rechnungsverarbeitung.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  audit_storage.py  auth.py  case_storage.py  config.py  config_storage.py  database.py  document_delete_request_storage.py  document_processing.py  document_storage.py  extraction_field_storage.py  graph.py  graph_config_storage.py  graph_query.py  insight_explainer.py  invoice_action_storage.py  invoice_mapping.py  invoice_storage.py  invoice_validation.py  kpi_service.py  main.py  minio_ingestion.py  provider_storage.py  recipient_resolution_storage.py  reset_service.py  user_storage.py  workflow_rules_storage.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx  api.js  main.jsx  styles.css
supabase/: add_extraction_field_display_name.sql  reset_app_users_to_legacy.sql  schema.sql
